--- a/untitled folder/app.html
+++ b/untitled folder/app.html
@@ -2,64 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+   <script>
+       window.localStorage.setItem('orders',0);
+   </script>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3">
-                <img class="img img-responsive" src="./download.png" alt="">
+   
+<input type="button" value="click" onclick="increment()">
+<div id="box"></div>
+<script>
 
-            </div>
-            <div class="col-md-3">
-                <h1 class="text-center mt-5">KOTAK MAHINDRA</h1>
-            </div>
-        </div>
-    </div>
-
-    <nav class="navbar navbar-inverse">
-        <div class="container-fliud">
-            <div class="header">
-                <a class="navbar-brand" href="#">KOtAK</a>
-            </div>
-
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Link</a>
-                </li>
-            </ul>
-            <ul class="navbar-right">
-                <li>
-                    <a href="#">signup</a>
-                </li>
+    var currorder
+     function increment(){
+        console.log("chalgya");
+        currorder = window.localStorage.getItem('orders'); 
+        var ne=parseInt(currorder)
+        ne=ne+1;
+        var d=document.getElementById("box").innerHTML=ne;
+        window.localStorage.setItem('orders',ne);
+    }
 
 
-            </ul>
-        </div>
-
-
-    </nav>
-
-
+</script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"
         integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
